@@ -1,0 +1,43 @@
+This work was packaged for LOD2 by:
+
+    Karel Kremer <Karel.Kremer@tenforce.com> on 24 September 2013 
+
+It was downloaded from:
+
+    http://code.google.com/p/lod2-stack/
+
+Upstream Author:
+
+    Karel Kremer, Karel.Kremer@tenforce.com
+
+Copyright:
+
+    Karel Kremer, Karel.Kremer@tenforce.com
+
+License:
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+
+   On Debian systems, the complete text of the Apache version 2.0 license
+   can be found in "/usr/share/common-licenses/Apache-2.0".
+
+The Debian packaging is:
+
+    Copyright (C) 2013 TenForce, Belgium
+
+   The package is licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
