@@ -1,0 +1,63 @@
+#!/bin/sh
+# postinst script for lod2-virtuoso-opensource
+#
+# see: dh_installdeb(1)
+
+set -e
+
+# summary of how this script can be called:
+#        * <postinst> `configure' <most-recently-configured-version>
+#        * <old-postinst> `abort-upgrade' <new version>
+#        * <conflictor's-postinst> `abort-remove' `in-favour' <package>
+#          <new-version>
+#        * <postinst> `abort-remove'
+#        * <deconfigured's-postinst> `abort-deconfigure' `in-favour'
+#          <failed-install-package> <version> `removing'
+#          <conflicting-package> <version>
+# for details, see http://www.debian.org/doc/debian-policy/ or
+# the debian-policy package
+
+
+case "$1" in
+    configure)
+
+	if [ ! -e /etc/virtuoso-opensource ]; then 
+	# loop through all versions of virtuoso that are supported an take the latest one
+	    for DIRECTORY in "virtuoso-opensource-6.1" "virtuoso-opensource-7.0"
+	    do
+		if [ -d "/etc/$DIRECTORY" ]; then
+		    if [ -h /etc/virtuoso-opensource ]; then
+			rm /etc/virtuoso-opensource
+			rm /usr/share/virtuoso-opensource
+			rm /var/lib/virtuoso-opensource
+		    fi
+		    ln -s "/etc/$DIRECTORY" /etc/virtuoso-opensource
+		    ln -s "/usr/share/$DIRECTORY" /usr/share/virtuoso-opensource
+		    ln -s "/var/lib/$DIRECTORY" /var/lib/virtuoso-opensource
+		fi
+	    done
+	fi
+
+        #support legacy systems
+	if [ ! -e /etc/virtuoso-opensource-6.1 ]; then
+	    ln -s /etc/virtuoso-opensource /etc/virtuoso-opensource-6.1 
+	    ln -s /usr/share/virtuoso-opensource /usr/share/virtuoso-opensource-6.1 
+	    ln -s /var/lib/virtuoso-opensource /var/lib/virtuoso-opensource-6.1 
+	fi
+
+    ;;
+
+    abort-upgrade|abort-remove|abort-deconfigure)
+    ;;
+
+    *)
+        echo "postinst called with unknown argument \`$1'" >&2
+        exit 1
+    ;;
+esac
+
+# dh_installdeb will replace this with shell code automatically
+# generated by other debhelper scripts.
+
+
+exit 0
