@@ -1,0 +1,68 @@
+#!/bin/sh
+# postrm script for lod2-virtuoso-opensourcec
+#
+# see: dh_installdeb(1)
+
+set -e
+
+# summary of how this script can be called:
+#        * <postrm> `remove'
+#        * <postrm> `purge'
+#        * <old-postrm> `upgrade' <new-version>
+#        * <new-postrm> `failed-upgrade' <old-version>
+#        * <new-postrm> `abort-install'
+#        * <new-postrm> `abort-install' <old-version>
+#        * <new-postrm> `abort-upgrade' <old-version>
+#        * <disappearer's-postrm> `disappear' <overwriter>
+#          <overwriter-version>
+# for details, see http://www.debian.org/doc/debian-policy/ or
+# the debian-policy package
+
+
+case "$1" in
+
+    purge|remove|abort-install|disappear)
+	if [ -h /etc/virtuoso-opensource ] ; then 
+	    rm /etc/virtuoso-opensource
+	fi
+
+	if [ -h /var/lib/virtuoso-opensource ] ; then 
+	    rm /var/lib/virtuoso-opensource
+	fi
+
+	if [ -h /usr/share/virtuoso-opensource ] ; then 
+	    rm /usr/share/virtuoso-opensource
+	fi
+
+        #remove legacy-support links
+	if [ -h /etc/virtuoso-opensource-6.1 ] ; then 
+	    rm /etc/virtuoso-opensource-6.1
+	fi
+
+	if [ -h /var/lib/virtuoso-opensource-6.1 ] ; then 
+	    rm /var/lib/virtuoso-opensource-6.1
+	fi
+
+	if [ -h /usr/share/virtuoso-opensource-6.1 ] ; then 
+	    rm /usr/share/virtuoso-opensource-6.1
+	fi
+
+	
+    ;;
+
+    upgrade|failed-upgrade|abort-upgrade)
+
+    ;;
+
+    *)
+        echo "postrm called with unknown argument \`$1'" >&2
+        exit 1
+    ;;
+esac
+
+# dh_installdeb will replace this with shell code automatically
+# generated by other debhelper scripts.
+
+#DEBHELPER#
+
+exit 0
